// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OTP Query Path 1`] = `"/api/plan?fromPlace=12%2C34&toPlace=34%2C12&mode=WALK%2CTRANSIT"`;

exports[`actions > api > routingQuery should gracefully handle bad response 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "routingType": "ITINERARY",
        "searchId": 2,
      },
      "type": "ROUTING_REQUEST",
    },
  ],
]
`;

exports[`actions > api > routingQuery should make a query to OTP 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "routingType": "ITINERARY",
        "searchId": 1,
      },
      "type": "ROUTING_REQUEST",
    },
  ],
]
`;
